Fixed issue with position trend /candidate and active positon widget alignment

--- a/src/app/dashboard/widgets/position-chart/position-chart.component.scss
+++ b/src/app/dashboard/widgets/position-chart/position-chart.component.scss
@@ -8,7 +8,7 @@
 
   &__title {
     padding-bottom: 4%;
-    font-size: 24px;
+    font-size: 16px;
     font-weight: 700;
     line-height: 24px;
     align-items: center;
